--- a/index.html
+++ b/index.html
@@ -13,33 +13,102 @@
     />
 
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css" />
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   </head>
   <body>
-    Features Pricing Resources Login Sign Up More than just shorter links Build
-    your brand’s recognition and get detailed insights on how your links are
-    performing. Get Started Shorten a link here... Shorten It! Advanced
-    Statistics Track how your links are performing across the web with our
-    advanced statistics dashboard. Brand Recognition Boost your brand
-    recognition with each click. Generic links don’t mean a thing. Branded links
-    help instil confidence in your content. Detailed Records Gain insights into
-    who is clicking your links. Knowing when and where people engage with your
-    content helps inform better decisions. Fully Customizable Improve brand
-    awareness and content discoverability through customizable links,
-    supercharging audience engagement. Boost your links today Get Started
-    Features Link Shortening Branded Links Analytics Resources Blog Developers
-    Support Company About Our Team Careers Contact
+    <header>
+      <nav>
+        <img class="logo" src="./images/logo.svg" alt="" />
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Resources</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Login</a></li>
+          <li class="nav-button"><a href="#">Sign Up</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <p>More than just shorter links</p>
+    <p>
+      Build your brand’s recognition and get detailed insights on how your links
+      are performing.
+    </p>
+    <button><p>Get Started</p></button>
+    <img src="./images/illustration-working.svg" alt="" />
+
+    <input type="text" placeholder="Shorten a link here..." />
+    <button><p>Shorten It!</p></button>
+    <p>Advanced Statistics</p>
+    <p>
+      Track how your links are performing across the web with our advanced
+      statistics dashboard.
+    </p>
+    <div class="cards">
+      <div class="card">
+        <img src="./images/icon-brand-recognition.svg" alt="" />
+        <p>Brand Recognition</p>
+        <p>
+          Boost your brand recognition with each click. Generic links don’t mean
+          a thing. Branded links help instil confidence in your content.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-detailed-records.svg" alt="" />
+        <p>Detailed Records</p>
+        <p>
+          Gain insights into who is clicking your links. Knowing when and where
+          people engage with your content helps inform better decisions.
+        </p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-fully-customizable.svg" alt="" />
+        <p>Fully Customizable</p>
+        <p>
+          Improve brand awareness and content discoverability through
+          customizable links, supercharging audience engagement.
+        </p>
+      </div>
     </div>
+
+    <p>Boost your links today</p>
+    <button><p>Get Started</p></button>
+
+    <img class="logo" src="./images/logo.svg" alt="" />
+    <ul>
+      <li>Features</li>
+      <li>Link Shortening</li>
+      <li>Branded Links</li>
+      <li>Analytics</li>
+    </ul>
+    <ul>
+      <li>Resources</li>
+      <li>Blog</li>
+      <li>Developers</li>
+      <li>Support</li>
+    </ul>
+    <ul>
+      <li>Company</li>
+      <li>About</li>
+      <li>Our Team</li>
+      <li>Careers</li>
+      <li>Contact</li>
+    </ul>
+
+    <img src="./images/icon-facebook.svg" alt="" />
+    <img src="./images/icon-twitter.svg" alt="" />
+    <img src="./images/icon-pinterest.svg" alt="" />
+    <img src="./images/icon-instagram.svg" alt="" />
+
+    <img src="./images/bg-boost-desktop.svg" alt="" />
+    <img src="./images/bg-boost-mobile.svg" alt="" />
+    <img src="./images/bg-shorten-mobile.svg" alt="" />
   </body>
 </html>
