style intro section

--- a/index.html
+++ b/index.html
@@ -31,18 +31,26 @@
         </ul>
         <ul>
           <li><a href="#">Login</a></li>
-          <li class="nav-button"><a href="#">Sign Up</a></li>
+          <li class="btn"><a href="#" class="sign-up">Sign Up</a></li>
         </ul>
       </nav>
     </header>
 
-    <p>More than just shorter links</p>
-    <p>
-      Build your brand’s recognition and get detailed insights on how your links
-      are performing.
-    </p>
-    <button><p>Get Started</p></button>
-    <img src="./images/illustration-working.svg" alt="" />
+    <main>
+      <div class="intro">
+        <div class="intro-text">
+          <h1>More than just <br />shorter links</h1>
+          <p>
+            Build your brand’s recognition and get detailed insights on how your
+            links are performing.
+          </p>
+          <button class="btn btn-large"><a href="#">Get Started</a></button>
+        </div>
+        <div class="intro-img">
+          <img src="./images/illustration-working.svg" alt="working" />
+        </div>
+      </div>
+    </main>
 
     <input type="text" placeholder="Shorten a link here..." />
     <button><p>Shorten It!</p></button>
