--- a/index.html
+++ b/index.html
@@ -51,72 +51,87 @@
         </div>
       </div>
     </main>
-
-    <input type="text" placeholder="Shorten a link here..." />
-    <button><p>Shorten It!</p></button>
-    <p>Advanced Statistics</p>
-    <p>
-      Track how your links are performing across the web with our advanced
-      statistics dashboard.
-    </p>
-    <div class="cards">
-      <div class="card">
-        <img src="./images/icon-brand-recognition.svg" alt="" />
-        <p>Brand Recognition</p>
-        <p>
-          Boost your brand recognition with each click. Generic links don’t mean
-          a thing. Branded links help instil confidence in your content.
-        </p>
+    <section class="input">
+      <div class="container">
+        <div class="input-box">
+          <form action="">
+            <input type="text" placeholder="Shorten a link here..." />
+            <button>Shorten It!</button>
+          </form>
+        </div>
       </div>
-      <div class="card">
-        <img src="./images/icon-detailed-records.svg" alt="" />
-        <p>Detailed Records</p>
-        <p>
-          Gain insights into who is clicking your links. Knowing when and where
-          people engage with your content helps inform better decisions.
-        </p>
+    </section>
+
+    <section class="statistics">
+      <p>Advanced Statistics</p>
+      <p>
+        Track how your links are performing across the web with our advanced
+        statistics dashboard.
+      </p>
+      <div class="cards">
+        <div class="card">
+          <img src="./images/icon-brand-recognition.svg" alt="" />
+          <p>Brand Recognition</p>
+          <p>
+            Boost your brand recognition with each click. Generic links don’t
+            mean a thing. Branded links help instil confidence in your content.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/icon-detailed-records.svg" alt="" />
+          <p>Detailed Records</p>
+          <p>
+            Gain insights into who is clicking your links. Knowing when and
+            where people engage with your content helps inform better decisions.
+          </p>
+        </div>
+        <div class="card">
+          <img src="./images/icon-fully-customizable.svg" alt="" />
+          <p>Fully Customizable</p>
+          <p>
+            Improve brand awareness and content discoverability through
+            customizable links, supercharging audience engagement.
+          </p>
+        </div>
       </div>
-      <div class="card">
-        <img src="./images/icon-fully-customizable.svg" alt="" />
-        <p>Fully Customizable</p>
-        <p>
-          Improve brand awareness and content discoverability through
-          customizable links, supercharging audience engagement.
-        </p>
+    </section>
+    <section class="boost">
+      <p>Boost your links today</p>
+      <button>Get Started</button>
+    </section>
+    <footer>
+      <img class="logo" src="./images/logo-white.svg" alt="" />
+      <div class="features">
+        <ul>
+          <li>Features</li>
+          <li>Link Shortening</li>
+          <li>Branded Links</li>
+          <li>Analytics</li>
+        </ul>
       </div>
-    </div>
-
-    <p>Boost your links today</p>
-    <button><p>Get Started</p></button>
-
-    <img class="logo" src="./images/logo.svg" alt="" />
-    <ul>
-      <li>Features</li>
-      <li>Link Shortening</li>
-      <li>Branded Links</li>
-      <li>Analytics</li>
-    </ul>
-    <ul>
-      <li>Resources</li>
-      <li>Blog</li>
-      <li>Developers</li>
-      <li>Support</li>
-    </ul>
-    <ul>
-      <li>Company</li>
-      <li>About</li>
-      <li>Our Team</li>
-      <li>Careers</li>
-      <li>Contact</li>
-    </ul>
-
-    <img src="./images/icon-facebook.svg" alt="" />
-    <img src="./images/icon-twitter.svg" alt="" />
-    <img src="./images/icon-pinterest.svg" alt="" />
-    <img src="./images/icon-instagram.svg" alt="" />
-
-    <img src="./images/bg-boost-desktop.svg" alt="" />
-    <img src="./images/bg-boost-mobile.svg" alt="" />
-    <img src="./images/bg-shorten-mobile.svg" alt="" />
+      <div class="resources">
+        <ul>
+          <li>Resources</li>
+          <li>Blog</li>
+          <li>Developers</li>
+          <li>Support</li>
+        </ul>
+      </div>
+      <div class="company">
+        <ul>
+          <li>Company</li>
+          <li>About</li>
+          <li>Our Team</li>
+          <li>Careers</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="social-icons">
+        <img src="./images/icon-facebook.svg" alt="" />
+        <img src="./images/icon-twitter.svg" alt="" />
+        <img src="./images/icon-pinterest.svg" alt="" />
+        <img src="./images/icon-instagram.svg" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
