--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <nav>
         <img class="logo" src="./images/logo.svg" alt="" />
         <ul>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Resources</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#resources">Resources</a></li>
         </ul>
         <ul>
           <li><a href="#">Login</a></li>
@@ -44,7 +44,9 @@
             Build your brand’s recognition and get detailed insights on how your
             links are performing.
           </p>
-          <button class="btn btn-large"><a href="#">Get Started</a></button>
+          <button class="btn-large">
+            <a href="#input">Get Started</a>
+          </button>
         </div>
         <div class="intro-img">
           <img src="./images/illustration-working.svg" alt="working" />
@@ -52,7 +54,7 @@
       </div>
     </main>
     <section class="input">
-      <div class="container">
+      <div id="input" class="container">
         <div class="input-box">
           <form action="">
             <input type="text" placeholder="Shorten a link here..." />
@@ -70,7 +72,7 @@
       </p>
       <div class="cards">
         <div class="card">
-          <img src="./images/icon-brand-recognition.svg" alt="" />
+          <img src="./images/icon-brand-recognition.svg" alt="icon" />
           <p>Brand Recognition</p>
           <p>
             Boost your brand recognition with each click. Generic links don’t
@@ -78,7 +80,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="./images/icon-detailed-records.svg" alt="" />
+          <img src="./images/icon-detailed-records.svg" alt="icon" />
           <p>Detailed Records</p>
           <p>
             Gain insights into who is clicking your links. Knowing when and
@@ -86,7 +88,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="./images/icon-fully-customizable.svg" alt="" />
+          <img src="./images/icon-fully-customizable.svg" alt="icon" />
           <p>Fully Customizable</p>
           <p>
             Improve brand awareness and content discoverability through
@@ -97,13 +99,13 @@
     </section>
     <section class="boost">
       <p>Boost your links today</p>
-      <button>Get Started</button>
+      <button><a href="#input">Get Started</a></button>
     </section>
     <footer>
-      <img class="logo" src="./images/logo-white.svg" alt="" />
+      <img class="logo" src="./images/logo-white.svg" alt="logo" />
       <div class="features">
         <ul>
-          <li>Features</li>
+          <li id="features">Features</li>
           <li>Link Shortening</li>
           <li>Branded Links</li>
           <li>Analytics</li>
@@ -111,7 +113,7 @@
       </div>
       <div class="resources">
         <ul>
-          <li>Resources</li>
+          <li id="resources">Resources</li>
           <li>Blog</li>
           <li>Developers</li>
           <li>Support</li>
@@ -127,10 +129,10 @@
         </ul>
       </div>
       <div class="social-icons">
-        <img src="./images/icon-facebook.svg" alt="" />
-        <img src="./images/icon-twitter.svg" alt="" />
-        <img src="./images/icon-pinterest.svg" alt="" />
-        <img src="./images/icon-instagram.svg" alt="" />
+        <img src="./images/icon-facebook.svg" alt="facebook-icon" />
+        <img src="./images/icon-twitter.svg" alt="twitter-icon" />
+        <img src="./images/icon-pinterest.svg" alt="pinterest-icon" />
+        <img src="./images/icon-instagram.svg" alt="instagram-icon" />
       </div>
     </footer>
   </body>
