--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <div class="intro-text">
           <h1>More than just <br />shorter links</h1>
           <p>
-            Build your brand’s recognition and get detailed insights on how your
-            links are performing.
+            Build your brand’s recognition and get detailed
+            <br />
+            <span> insights on how your links are performing. </span>
           </p>
           <button class="btn-large">
             <a href="#input">Get Started</a>
@@ -65,12 +66,13 @@
     </section>
 
     <section class="statistics">
-      <p>Advanced Statistics</p>
-      <p>
-        Track how your links are performing across the web with our advanced
-        statistics dashboard.
+      <h2>Advanced Statistics</h2>
+      <p class="statistics-text">
+        Track how your links are performing across the web with <br />
+        <span>our advanced statistics dashboard.</span>
       </p>
       <div class="cards">
+        <hr class="card-line" />
         <div class="card">
           <img src="./images/icon-brand-recognition.svg" alt="icon" />
           <p>Brand Recognition</p>
@@ -102,7 +104,7 @@
       <button><a href="#input">Get Started</a></button>
     </section>
     <footer>
-      <img class="logo" src="./images/logo-white.svg" alt="logo" />
+      <img class="logo-white" src="./images/logo-white.svg" alt="logo" />
       <div class="features">
         <ul>
           <li id="features">Features</li>
