--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         Track how your links are performing across the web with <br />
         <span>our advanced statistics dashboard.</span>
       </p>
+      <hr class="card-line" />
       <div class="cards">
-        <hr class="card-line" />
         <div class="card">
           <img src="./images/icon-brand-recognition.svg" alt="icon" />
-          <p>Brand Recognition</p>
+          <p class="card-title">Brand Recognition</p>
           <p>
             Boost your brand recognition with each click. Generic links don’t
             mean a thing. Branded links help instil confidence in your content.
@@ -83,7 +83,7 @@
         </div>
         <div class="card">
           <img src="./images/icon-detailed-records.svg" alt="icon" />
-          <p>Detailed Records</p>
+          <p class="card-title">Detailed Records</p>
           <p>
             Gain insights into who is clicking your links. Knowing when and
             where people engage with your content helps inform better decisions.
@@ -91,7 +91,7 @@
         </div>
         <div class="card">
           <img src="./images/icon-fully-customizable.svg" alt="icon" />
-          <p>Fully Customizable</p>
+          <p class="card-title">Fully Customizable</p>
           <p>
             Improve brand awareness and content discoverability through
             customizable links, supercharging audience engagement.
