Fixed some styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./script.js"></script>
   </head>
   <body>
     <header>
@@ -74,7 +75,9 @@
       <hr class="card-line" />
       <div class="cards">
         <div class="card">
-          <img src="./images/icon-brand-recognition.svg" alt="icon" />
+          <div class="circle">
+            <img src="./images/icon-brand-recognition.svg" alt="icon" />
+          </div>
           <p class="card-title">Brand Recognition</p>
           <p>
             Boost your brand recognition with each click. Generic links don’t
@@ -82,7 +85,9 @@
           </p>
         </div>
         <div class="card">
-          <img src="./images/icon-detailed-records.svg" alt="icon" />
+          <div class="circle">
+            <img src="./images/icon-detailed-records.svg" alt="icon" />
+          </div>
           <p class="card-title">Detailed Records</p>
           <p>
             Gain insights into who is clicking your links. Knowing when and
@@ -90,7 +95,9 @@
           </p>
         </div>
         <div class="card">
-          <img src="./images/icon-fully-customizable.svg" alt="icon" />
+          <div class="circle">
+            <img src="./images/icon-fully-customizable.svg" alt="icon" />
+          </div>
           <p class="card-title">Fully Customizable</p>
           <p>
             Improve brand awareness and content discoverability through
