--- a/index.html
+++ b/index.html
@@ -74,11 +74,29 @@
       <div class="links">
         <div class="link-container">
           <div class="urls">
-            <p class="long-url">Long URL</p>
-            <p class="short-url" id="copy-url">Short URL</p>
+            <p class="long-url">https://www.link.com/long/</p>
+            <p class="short-url" id="copy-url">https://link.io</p>
           </div>
           <button class="copy-btn" id="copy-btn" onclick="clicked()">
-            <a href="#">Copy</a>
+            <a href="">Copy</a>
+          </button>
+        </div>
+        <div class="link-container">
+          <div class="urls">
+            <p class="long-url">https://www.link.com/long/</p>
+            <p class="short-url" id="copy-url">https://link.io</p>
+          </div>
+          <button class="copy-btn" id="copy-btn-1" onclick="clicked()">
+            <a href="">Copy</a>
+          </button>
+        </div>
+        <div class="link-container">
+          <div class="urls">
+            <p class="long-url">https://www.link.com/long/</p>
+            <p class="short-url" id="copy-url">https://link.io</p>
+          </div>
+          <button class="copy-btn" id="copy-btn" onclick="clicked()">
+            <a href="">Copy</a>
           </button>
         </div>
       </div>
