--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-      <div class="intro">
+      <section class="intro">
         <div class="intro-text">
           <h1>More than just <br />shorter links</h1>
           <p>
@@ -53,10 +53,8 @@
         <div class="intro-img">
           <img src="./images/illustration-working.svg" alt="working" />
         </div>
-      </div>
-    </main>
-    <section class="input">
-      <div id="input" class="container">
+      </section>
+      <section class="input">
         <div class="input-box">
           <form action="">
             <input
@@ -67,82 +65,84 @@
             <button id="shorten-btn" onclick="shorten()">Shorten It!</button>
           </form>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="statistics">
-      <div class="links">
-        <div class="link-container">
-          <div class="urls">
-            <p class="long-url">https://www.link.com/long/</p>
-            <p class="short-url" id="copy-url">https://link.io</p>
+      <section class="statistics">
+        <div class="links">
+          <div class="link-container">
+            <div class="urls">
+              <p class="long-url">https://www.link.com/long/</p>
+              <p class="short-url" id="copy-url">https://link.io</p>
+            </div>
+            <button class="copy-btn" id="copy-btn" onclick="clicked()">
+              <a href="">Copy</a>
+            </button>
           </div>
-          <button class="copy-btn" id="copy-btn" onclick="clicked()">
-            <a href="">Copy</a>
-          </button>
-        </div>
-        <div class="link-container">
-          <div class="urls">
-            <p class="long-url">https://www.link.com/long/</p>
-            <p class="short-url" id="copy-url">https://link.io</p>
+          <div class="link-container">
+            <div class="urls">
+              <p class="long-url">https://www.link.com/long/</p>
+              <p class="short-url" id="copy-url">https://link.io</p>
+            </div>
+            <button class="copy-btn" id="copy-btn-1" onclick="clicked()">
+              <a href="">Copy</a>
+            </button>
           </div>
-          <button class="copy-btn" id="copy-btn-1" onclick="clicked()">
-            <a href="">Copy</a>
-          </button>
-        </div>
-        <div class="link-container">
-          <div class="urls">
-            <p class="long-url">https://www.link.com/long/</p>
-            <p class="short-url" id="copy-url">https://link.io</p>
+          <div class="link-container">
+            <div class="urls">
+              <p class="long-url">https://www.link.com/long/</p>
+              <p class="short-url" id="copy-url">https://link.io</p>
+            </div>
+            <button class="copy-btn" id="copy-btn" onclick="clicked()">
+              <a href="">Copy</a>
+            </button>
           </div>
-          <button class="copy-btn" id="copy-btn" onclick="clicked()">
-            <a href="">Copy</a>
-          </button>
         </div>
-      </div>
-      <h2>Advanced Statistics</h2>
-      <p class="statistics-text">
-        Track how your links are performing across the web with <br />
-        <span>our advanced statistics dashboard.</span>
-      </p>
-      <hr class="card-line" />
-      <div class="cards">
-        <div class="card">
-          <div class="circle">
-            <img src="./images/icon-brand-recognition.svg" alt="icon" />
+        <h2>Advanced Statistics</h2>
+        <p class="statistics-text">
+          Track how your links are performing across the web with <br />
+          <span>our advanced statistics dashboard.</span>
+        </p>
+        <hr class="card-line" />
+        <div class="cards">
+          <div class="card">
+            <div class="circle">
+              <img src="./images/icon-brand-recognition.svg" alt="icon" />
+            </div>
+            <p class="card-title">Brand Recognition</p>
+            <p>
+              Boost your brand recognition with each click. Generic links don’t
+              mean a thing. Branded links help instil confidence in your
+              content.
+            </p>
           </div>
-          <p class="card-title">Brand Recognition</p>
-          <p>
-            Boost your brand recognition with each click. Generic links don’t
-            mean a thing. Branded links help instil confidence in your content.
-          </p>
-        </div>
-        <div class="card">
-          <div class="circle">
-            <img src="./images/icon-detailed-records.svg" alt="icon" />
+          <div class="card">
+            <div class="circle">
+              <img src="./images/icon-detailed-records.svg" alt="icon" />
+            </div>
+            <p class="card-title">Detailed Records</p>
+            <p>
+              Gain insights into who is clicking your links. Knowing when and
+              where people engage with your content helps inform better
+              decisions.
+            </p>
           </div>
-          <p class="card-title">Detailed Records</p>
-          <p>
-            Gain insights into who is clicking your links. Knowing when and
-            where people engage with your content helps inform better decisions.
-          </p>
-        </div>
-        <div class="card">
-          <div class="circle">
-            <img src="./images/icon-fully-customizable.svg" alt="icon" />
+          <div class="card">
+            <div class="circle">
+              <img src="./images/icon-fully-customizable.svg" alt="icon" />
+            </div>
+            <p class="card-title">Fully Customizable</p>
+            <p>
+              Improve brand awareness and content discoverability through
+              customizable links, supercharging audience engagement.
+            </p>
           </div>
-          <p class="card-title">Fully Customizable</p>
-          <p>
-            Improve brand awareness and content discoverability through
-            customizable links, supercharging audience engagement.
-          </p>
         </div>
-      </div>
-    </section>
-    <section class="boost">
-      <p>Boost your links today</p>
-      <button><a href="#input">Get Started</a></button>
-    </section>
+      </section>
+      <section class="boost">
+        <p>Boost your links today</p>
+        <button><a href="#input">Get Started</a></button>
+      </section>
+    </main>
     <footer>
       <img class="logo-white" src="./images/logo-white.svg" alt="logo" />
       <div class="features">
